<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pref_key_version" translatable="false">pref_key_ver_info</string>
    <string name="pref_key_announce" translatable="false">pref_key_announce</string>
    <string name="pref_key_check_new_ver" translatable="false">pref_key_check_new_ver</string>
    <string name="pref_key_reset" translatable="false">pref_key_reset</string>
    <string name="app_name">Reciter</string>
    <string name="announce">announce</string>
    <string name="loading">Loading&#8230;</string>
    <string name="settings">Settings</string>
    <string name="my_word_book">Correction</string>
    <string name="exit">Exit</string>
    <string name="empty">Empty</string>
    <string name="tip_select_items_to_unstar">Select items to unstar</string>
    <string name="tip_add_to_word_book">Added <b>%s</b> to word book</string>
    <string name="tip_remove_from_word_book">Remove <b>%s</b> from word book</string>
    <string name="about">About</string>
    <string name="version">Version Name</string>
    <string name="test_report_content">Tested number: %1$d\nCorrect number: %2$d\nElapsed time: %3$d\"\nAccuracy rating: %4$d%%\nDatabase Size: %5$d\nMastered word number: %6$d</string>
    <string name="update_confirm">Do you want to update to v%s?</string>
    <string name="add_to_word_book">Add to word book</string>
    <string name="read">read</string>
    <string name="remove_from_word_book">Remove from word book</string>
    <string name="unit">Unit</string>
    <string name="test">Test</string>
    <string name="unknown">UNKNOWN</string>
    <string name="random">Random</string>
    <string name="tip_word_book_is_empty">Word book is empty</string>
    <string name="test_report">Test Report</string>
    <string name="other">Other</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="reset_sumarry">Reset all perferences to default ones</string>
    <string name="pref_key_allow_review_notification" translatable="false">pref_key_allow_review_notification</string>
    <string name="pref_key_allow_auto_check_version" translatable="false">pref_key_allow_auto_check_version</string>
    <string name="time_to_review">Remember "%s"?</string>
    <string name="time_to_review_words">Time to review words</string>
    <string name="tap_to_start_reciting_words">Tap to start reciting words</string>
    <string name="background">background</string>
    <string name="notify_to_review_in_regular_time">Notify to review in regular time</string>
    <string name="notify">Notify</string>
    <string name="allow_to_check_latest_version_automatically">Allow to check latest version automatically</string>
    <string name="auto_check_latest_version">Auto check latest version</string>
    <string name="update_to_latest_version">Download v%s ?</string>
    <string name="mot">Mot</string>
    <string name="nce1">New Concept English (I)</string>
    <string name="nce2">New Concept English (II)</string>
    <string name="nce3">New Concept English (III)</string>
    <string name="nce4">New Concept English (IV)</string>
    <string name="reflets_1">Reflets (I)</string>
    <string name="linguistics_glossary">Linguistics Glossary</string>
    <string name="pro_en_core">Pro English</string>
    <string name="liuyi_5000">Liu Yi 5, 000</string>
    <string name="ogden" translatable="false">Ogden 850</string>
    <string name="liuyi_10000">Liu Yi 10, 000</string>
    <string name="liuyi_22000">Liu Yi 22, 000</string>
    <string name="unit_id">Unit-<b>%d</b></string>
    <string name="unit_contents_num" translatable="false">(%d ~ %d)</string>
    <string name="countdown_timer">Countdown Timer</string>
    <string name="done">Done</string>
    <string name="kaoyan">考研</string>
    <string name="date">Date</string>
    <string name="start_test">Start Testing</string>
    <string name="select_test_type">Select Test Type</string>
    <string name="click_notification_to_install_when_download_completed">Click notification to install when download completed</string>
    <string name="click_to_install_reciter">Click to install reciter</string>
    <string name="test_type_foreign_to_chinese_random">Foreign - Chinese (Random)</string>
    <string name="test_type_foreign_to_chinese_correction_book">Foreign - Chinese (Correction Book)</string>
    <string name="test_type_chinese_to_foreign_random">Chinese - Foreign (Random)</string>
    <string name="test_type_chinese_to_foreign_correction_book">Chinese - Foreign (Correction Book)</string>
    <string name="test_spell_foreign_correction_book">Spell Test(Correction Book)</string>
    <string name="random_completion_test">Spell Test (Random)</string>
    <string name="test_type_foreign_to_chinese_random_literature">Work - Author (Random)</string>
    <string name="test_type_foreign_to_chinese_correction_book_literature">Work - Author (Correction Book)</string>
    <string name="test_type_chinese_to_foreign_random_literature">Author - Work (Random)</string>
    <string name="test_type_chinese_to_foreign_correction_book_literature">Author - Work (Correction Book)</string>
    <string name="test_spell_foreign_correction_book_literature">Spell Test(Correction Book)</string>
    <string name="random_completion_test_literature">Spell Test (Random)</string>
    <string name="test_record_is_empty">There is no rest record now</string>
    <string name="book_list">Book List</string>
    <string name="downloading_the_latest_reciter_apk_file">Downloading the latest Reciter APK file&#8230;</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="skip">Skip</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="announce_content" translatable="false">本软件中的单词源部分取自网络，部分取自相关图书，在此向付出努力的人们表示感谢。如果侵犯了您版权，请及时联系作者(vhow@163.com)。一经确认，相关内容会被及时移除。</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="linguistics">Linguistics</string>
    <string name="literature">Literature</string>
    <string name="american_literature">American Literature</string>

</resources>