<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    tools:context=".CountdownTimerWidgetConfigActivity" >

    <TextView
        android:id="@+id/tv_countdown_timer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/countdown_timer_name" />

    <EditText
        android:id="@+id/et_countdown_timer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_countdown_timer_name"
        android:ems="8"
        android:hint="@string/kaoyan" >
    </EditText>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_countdown_timer_name"
        android:layout_marginTop="9dp"
        android:text="@string/date" />

    <DatePicker
        android:id="@+id/dp_countdown_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_countdown_timer_set_panel"
        android:layout_below="@+id/tv_date"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/ll_countdown_timer_set_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:divider="?android:attr/dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="beginning" >

        <Button
            android:id="@+id/btn_countdown_timer_set_done"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" />
    </LinearLayout>

</RelativeLayout>