<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Luncher" >

    <GridView
        android:id="@+id/gv_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu"
        android:layout_alignParentTop="true"
        android:horizontalSpacing="@dimen/horizontal_spacing"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="@dimen/vertical_spacing" >
    </GridView>

    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pb_loading"
            android:layout_centerHorizontal="true"
            android:text="@string/loading" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menu"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="3" >

        <Button
            android:id="@+id/btn_setting"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/settings"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <Button
            android:id="@+id/btn_exit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/exit"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <Button
            android:id="@+id/btn_word_book"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/new_word_book"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
    </LinearLayout>

</RelativeLayout>