<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:text="@string/unknown"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/holo_blue_bright"
            android:textIsSelectable="true"
            android:textStyle="italic" />

        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:alpha="0" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_meaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_bg"
                    android:gravity="center"
                    android:padding="6dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/holo_orange_dark"
                    android:textIsSelectable="true"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tv_sample"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:gravity="center"
                    android:padding="6dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textIsSelectable="true" />
            </LinearLayout>
        </ViewFlipper>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/arrows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:divider="?android:attr/listDivider"
        android:orientation="vertical"
        android:showDividers="beginning" >

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/listDivider"
            android:dividerPadding="10dp"
            android:orientation="horizontal"
            android:showDividers="middle" >

            <Button
                android:id="@+id/btn_previous"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/previous"
                android:text="@string/previous"
                android:textColor="@color/gray_light"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btn_show"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/show"
                android:text="@string/show"
                android:textColor="@color/gray_light"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btn_next"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/next"
                android:text="@string/next"
                android:textColor="@color/gray_light"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>