<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <com.gmail.dailyefforts.android.reciter.test.drag.DragOptBtn
            android:id="@+id/btn_drop_meaning_top_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="6dp"
            android:layout_weight="1" />

        <com.gmail.dailyefforts.android.reciter.test.drag.DragOptBtn
            android:id="@+id/btn_drop_meaning_top_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="6dp"
            android:layout_weight="1" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/check_auto_speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:alpha="0.5"
        android:text="Auto Speak"
        android:textAppearance="@android:attr/textAppearanceSmall"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_drop_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dummy"
        android:background="@drawable/btn_bg"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:text="@string/unknown"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/holo_blue_bright"
        android:textIsSelectable="true"
        android:textSize="30sp" />

    <View
        android:id="@+id/dummy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/arrows"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/dummy"
        android:layout_marginTop="6dp" >

        <TextView
            android:id="@+id/tv_sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textIsSelectable="true"
            android:visibility="gone" />
    </ScrollView>

    <RelativeLayout
        android:id="@+id/arrows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_opt_bottom"
        android:paddingBottom="6dp" >

        <ImageButton
            android:id="@+id/btn_drop_arrow_left"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:alpha="0.2"
            android:contentDescription="@string/previous"
            android:src="@drawable/btn_arrow_left" />

        <ImageButton
            android:id="@+id/btn_drop_arrow_right"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:alpha="0.2"
            android:contentDescription="@string/next"
            android:src="@drawable/btn_arrow_right" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_opt_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <com.gmail.dailyefforts.android.reciter.test.drag.DragOptBtn
            android:id="@+id/btn_drop_meaning_bottom_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="6dp"
            android:layout_weight="1" />

        <com.gmail.dailyefforts.android.reciter.test.drag.DragOptBtn
            android:id="@+id/btn_drop_meaning_bottom_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="6dp"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>